add css to header

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <footer>
         <div class="container">
             <div class="footer__nav">
-                <a class="footer__nav-link" href="#">Чому ми</a>
-                <a class="footer__nav-link" href="#">Чому це важливо</a>
-                <a class="footer__nav-link" href="#">Зробити внесок</a>
+                <a class="footer__nav-link" href="#">Умови користування</a>
+                <a class="footer__nav-link" href="#">Політика конфедійційності</a>
+                <a class="footer__nav-link" href="#">Контакти</a>
             </div>
             <span>Copyright 2022, Fuck russian warship</span>
         </div>
