--- a/index.html
+++ b/index.html
@@ -23,43 +23,50 @@
     </header>
     </div>
     <main>
-        <div class="container">
-            <section class="adding">
-                <h2>Разом до перемоги!!!</h2>
-                <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
-                    <input type="email" name="email" id="email" placeholder="Залиште свою пошту" required>
-                    <input id="submit" type="submit" value="Відправити" class="btn">
-                </form>
 
-            </section>
-            <section id="why-we">
+        <section class="together container">
+            <h2>Разом до перемоги!!!</h2>
+            <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
+                <input type="email" name="email" id="email" placeholder="Залиште свою пошту" required>
+                <input id="submit" type="submit" value="Відправити" class="btn">
+            </form>
+
+        </section>
+        <section id="why-we">
+            <div class="container">
                 <div class="why-we__item">
                     <div class="why-we__item-img">
                         <img src="img/clock .svg" alt="clock">
                     </div>
                     <div class="why-we__item-txt">
-                        <p>Ми допомогаємо с першого дня війни та щотижня публікуємо детальні звіти</p>
                     </div>
+                    <p>Ми допомогаємо с першого дня війни та щотижня публікуємо детальні звіти</p>
+
                 </div>
                 <div class="why-we__item">
                     <div class="why-we__item-img">
                         <img src="img/diagram.svg" alt="diagram image">
-                        <p>Тільки за квітень наш фонд роздав продуктові набори більш ніж 1000 родин з постраждалих
-                            районів</p>
                     </div>
-                    <div class="why-we__item-txt">
-                        <img src="img/check.svg" alt="check image">
-                        <p>Маємо офіційно зареестрований фонд - всю нашу діяльність регулярно перевіряє держава</p>
-                    </div>
-                </div>
+                    <p>Тільки за квітень наш фонд роздав продуктові набори більш ніж 1000 родин з постраждалих
+                        районів</p>
 
-            </section>
-            <section id="why-it">
-                <video id="video"
-                    src="https://drive.google.com/file/d/1LagL7UlxVt0VKCuPMSrDlWpo8Z9ufGj0/view?usp=sharing"
-                    controls></video>
-            </section>
-            <section id="donate-us">
+                </div>
+                <div class="why-we__item">
+                    <div class="why-we__item-img">
+                        <img src="img/check.svg" alt="check image">
+                    </div>
+                    <p>Маємо офіційно зареестрований фонд - всю нашу діяльність регулярно перевіряє держава</p>
+
+                </div>
+            </div>
+        </section>
+        <section id="why-it">
+            <div class="container">
+                <video id="video" src="img/videoplayback.mp4" controls></video>
+            </div>
+        </section>
+        <section id="donate-us">
+            <div class="container">
                 <h2>Зробити внесок</h2>
                 <div class="donate__cards">
                     <h3>200грн</h3>
@@ -76,8 +83,9 @@
                     <p>Дозволить нам купити набір продуктів на 5+ родин</p>
                     <button class="btn">Задонатити</button>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+
     </main>
     <footer>
         <div class="container">
